--- a/03_cifar10_feedforward_jed.ipynb
+++ b/03_cifar10_feedforward_jed.ipynb
@@ -2,6 +2,11 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
+    "colab": {
+      "name": " 03-cifar10-feedforward-jed.ipynb",
+      "provenance": [],
+      "include_colab_link": true
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -18,11 +23,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.6.4"
-    },
-    "colab": {
-      "name": " 03-cifar10-feedforward-jed.ipynb",
-      "provenance": [],
-      "include_colab_link": true
     }
   },
   "cells": [
@@ -39,17 +39,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wgdR0YJirMMD"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N5qw8gkZuFn5",
+        "outputId": "7d7b8b06-9b4e-4dff-b05e-c3e4a9c5212b"
       },
       "source": [
         "# Jovian Commit Essentials\n",
         "# Please retain and execute this cell without modifying the contents for `jovian.commit` to work\n",
         "!pip install jovian --upgrade -q\n",
         "import jovian\n",
-        "jovian.utils.colab.set_colab_file_id('10fHhDGBuW9yY2No1mQhd33Q6B-PwHHyT')"
+        "jovian.utils.colab.set_colab_file_id('1v8kSzd3Y71oFOC2TfdZnNuY6SFyWy9FR')"
       ],
-      "execution_count": 25,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[?25l\r\u001b[K     |█████                           | 10kB 20.7MB/s eta 0:00:01\r\u001b[K     |██████████                      | 20kB 23.1MB/s eta 0:00:01\r\u001b[K     |██████████████▉                 | 30kB 12.6MB/s eta 0:00:01\r\u001b[K     |███████████████████▉            | 40kB 9.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████▉       | 51kB 7.3MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▊  | 61kB 7.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 71kB 4.6MB/s \n",
+            "\u001b[?25h  Building wheel for uuid (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -105,9 +118,10 @@
         "from torchvision.utils import make_grid\n",
         "from torch.utils.data.dataloader import DataLoader\n",
         "from torch.utils.data import random_split\n",
-        "%matplotlib inline"
+        "%matplotlib inline\n",
+        "c = 3"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -117,9 +131,9 @@
       },
       "source": [
         "# Project name used for jovian.commit\n",
-        "project_name = '03-cifar10-feedforward'"
+        "project_name = '03-cifar10-feedforward-jed'"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -336,82 +350,65 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "T96VHpg9rMMW",
-        "outputId": "17a577c8-9153-4be1-e475-489292a2e3b0"
+        "id": "T96VHpg9rMMW"
       },
       "source": [
         "!pip install jovian --upgrade --quiet"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\u001b[33mWARNING: You are using pip version 20.1; however, version 20.1.1 is available.\r\n",
-            "You should consider upgrading via the '/opt/conda/bin/python3.7 -m pip install --upgrade pip' command.\u001b[0m\r\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 6,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iodc_OeJrMMX",
-        "outputId": "fc7ba23d-43bc-4735-e906-3e58f8b6fee6"
+        "id": "iodc_OeJrMMX"
       },
       "source": [
         "import jovian"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/javascript": [
-              "if (window.IPython && IPython.notebook.kernel) IPython.notebook.kernel.execute('jovian.utils.jupyter.get_notebook_name_saved = lambda: \"' + IPython.notebook.notebook_name + '\"')"
-            ],
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
+      "execution_count": 7,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "S1JJmsgMrMMX",
-        "outputId": "6ab44137-e647-4ede-a312-c016acae852f"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 120
+        },
+        "outputId": "a5df0b34-da88-4a46-9fcb-e39bf4236c41"
       },
       "source": [
         "jovian.commit(project=project_name, environment=None)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "display_data",
+          "output_type": "stream",
+          "text": [
+            "[jovian] Detected Colab notebook...\u001b[0m\n",
+            "[jovian] Please enter your API key ( from https://jovian.ai/ ):\u001b[0m\n",
+            "API KEY: ··········\n",
+            "[jovian] Uploading colab notebook to Jovian...\u001b[0m\n",
+            "[jovian] Committed successfully! https://jovian.ai/rj-0605/03-cifar10-feedforward-jed\u001b[0m\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
           "data": {
-            "application/javascript": [
-              "window.require && require([\"base/js/namespace\"],function(Jupyter){Jupyter.notebook.save_checkpoint()})"
-            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
             "text/plain": [
-              "<IPython.core.display.Javascript object>"
+              "'https://jovian.ai/rj-0605/03-cifar10-feedforward-jed'"
             ]
           },
           "metadata": {
             "tags": []
-          }
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "[jovian] Attempting to save notebook..\u001b[0m\n"
-          ],
-          "name": "stdout"
+          },
+          "execution_count": 8
         }
       ]
     },
